--- a/public/config/DashboardConfig.json
+++ b/public/config/DashboardConfig.json
@@ -1,355 +1,9 @@
 {
-  "theme": {
-    "canvas": "#142a36",
-    "lightText": "#F7F7F7",
-    "border": "#142a36",
-    "title": "#E6E6E6",
-    "titleText": "#F7F7F7",
-    "textOnCanvas": "#F7F7F7",
-    "content": "#FDFDFD",
-    "major": "#2E3636",
-    "minor": "#899399",
-    "least": "#a9acac",
-    "accent": "#4581E0",
-    "GOOD": "#8CD210",
-    "FAIR": "#899399",
-    "CRITICAL": "#FF5050",
-    "font": "'Helvetica Neue',HelveticxfaNeue,Helvetica,'Segoe UI',Segoe,Calibri,Roboto,'Droid Sans','Arial Unicode MS',Arial,sans-serif",
-    "logo": "/assets/dashboard/iot.jpg",
-
-    "light": "#c7c7c7",
-    "normal": "#959595",
-    "dark": "#5a5a5a",
-
-    "palette": ["#5596E6", "#4178BE", "#325C80", "#264A60", "#1D3649", "#323c3c", "#3c4646", "#5a6464", "#6d7777", "#959f9f"],
-
-    "schemes": [
-      {
-        "name": 0,
-        "light": "#9855D4",
-        "normal": "#704199",
-        "dark": "#311a41",
-        "palette": ["#ba8FF7", "#9855D4", "#734098", "#562f72", "#412356", "#311a41"]
-      },
-      {
-        "name": 1,
-        "light": "#db2780",
-        "normal": "#9e215f",
-        "dark": "#3a0B2E",
-        "palette": ["#ff3ca0", "#db2780", "#a6266e", "#7c1c58", "#601146", "#3a0B2E"]
-      },
-      {
-        "name": 2,
-        "light": "#00bfa0",
-        "normal": "#068375",
-        "dark": "#012b22",
-        "palette": ["#41d6c3", "#00b4a0", "#008571", "#006d5d", "#005448", "#012b22"]
-      },
-      {
-        "name": 3,
-        "light": "#4178be",
-        "normal": "#33598a",
-        "dark": "#152935",
-        "palette": ["#5596e6", "#4178be", "#325c80", "#264a60", "#1d3649", "#152935"]
-      },
-      {
-        "name": 4,
-        "light": "#00aec9",
-        "normal": "#067f92",
-        "dark": "#002e36",
-        "palette": ["#00b3cf", "#00aec9", "#007182", "#005b69", "#00454f", "#002e36"]
-      }
-    ]
-  },
-
-  "capabilities": {
-    "multipleDashboards": false,
-    "multiplePages": false,
-    "showControls": true,
-    "useOldDialogs": false,
-    "breakpoints": {"xxl": 1649, "xl": 1324, "lg": 999, "md": 674, "sm": 349},
-    "cols": {"xxl": 10, "xl": 8, "lg": 6, "md": 4, "sm": 2},
-    "rowHeight": 105,
-    "margin": [25,25]
-  },
-
   "settings": {
-    "configRepositoryURL": "http://configrepositoryservice.mybluemix.net/rest",
-    "configRepositoryUser": "admin",
-    "configRepositoryPassword": "admin",
-    "configName": "Playground",
-    "configVersion": 1
+    "package": "SampleCards"
   },
 
   "components": [
-    {
-      "name": "DeviceTypes",
-      "displayName": "COMP_TITLE_DeviceTypes",
-      "description": "COMP_DESC_DeviceTypes",
-      "category": "Usage",
-      "cardType": "NO_DATAPOINTS",
-      "thumbnail": "device-types",
-      "require": ["../cards/DeviceTypes.jsx"],
-      "wrapper": "ReactWrapper",
-      "sizes": [[2,3],[2,4],[4,3],[4,4]],
-      "sticky": false,
-      "showRefresh": true,
-      "parameters" : {
-        "component": "DeviceTypes",
-        "title": "Device types"
-      }
-    },
-    {
-      "name": "UsageDeviceCard",
-      "displayName": "COMP_TITLE_UsageDevice",
-      "description": "COMP_DESC_UsageDevice",
-      "category": "Usage",
-      "cardType": "NO_DATAPOINTS",
-      "thumbnail": "connected-devices",
-      "require": ["../cards/UsageDeviceCard.jsx"],
-      "wrapper": "ReactWrapper",
-      "sizes": [[2,1],[2,2],[2,3],[3,4],[4,4]],
-      "sticky": false,
-      "showRefresh": true,
-      "parameters" : {
-        "component": "UsageDeviceCard",
-        "title": "Device connections"
-      }
-    },
-    {
-      "name": "UsageDataCard",
-      "displayName": "COMP_TITLE_UsageData",
-      "description": "COMP_DESC_UsageData",
-      "category": "Usage",
-      "cardType": "NO_DATAPOINTS",
-      "thumbnail": "traffic-consumption",
-      "require": ["../cards/UsageDataCard.jsx"],
-      "wrapper": "ReactWrapper",
-      "sizes": [[2,1],[2,2],[2,3],[3,4],[4,4]],
-      "sticky": false,
-      "showRefresh": true,
-      "parameters" : {
-        "component": "UsageDataCard",
-        "title": "Data consumed"
-      }
-    },
-    {
-      "name": "UsageStorageCard",
-      "displayName": "COMP_TITLE_UsageStorage",
-      "description": "COMP_DESC_UsageStorage",
-      "category": "Usage",
-      "cardType": "NO_DATAPOINTS",
-      "thumbnail": "storage-consumption",
-      "require": ["../cards/UsageStorageCard.jsx"],
-      "wrapper": "ReactWrapper",
-      "sizes": [[2,1],[2,2],[2,3],[3,4],[4,4]],
-      "sticky": false,
-      "showRefresh": true,
-      "parameters" : {
-        "component": "UsageStorageCard",
-        "title": "Storage consumed"
-      }
-    },
-    {
-      "name": "HorizontalLine",
-      "displayName": "COMP_TITLE_HorizontalLine",
-      "description": "COMP_DESC_HorizontalLine",
-      "category": "Basic",
-      "cardType": "NO_DATAPOINTS",
-      "thumbnail": "horizontal-seperator",
-      "require": ["../cards/HorizontalLine.jsx"],
-      "wrapper": "ReactWrapper",
-      "sizes": [[2,1],[3,1],[4,1],[6,1],[8,1]],
-      "sticky": false,
-      "parameters" : {
-        "component": "HorizontalLine",
-        "title": "Separator"
-      }
-    },
-
-    {
-      "name": "RealTimeChart",
-      "displayName": "COMP_TITLE_RealTimeChart",
-      "description": "COMP_DESC_RealTimeChart",
-      "thumbnail" : "line-chart",
-      "category": "Devices",
-      "cardType": "",
-      "require": ["../cards/RealTimeChart.jsx", "../customization/RealTimeChartProperties.jsx"],
-      "wrapper": "ReactWrapper",
-      "sizes": [[2,3],[2,4],[3,4],[4,4]],
-      "parameters" : {
-        "component": "RealTimeChart",
-        "title": "Real time chart",
-        "autoscroll": true
-      },
-      "customization": "RealTimeChartProperties"
-    },
-    {
-      "name": "BarChart",
-      "displayName": "COMP_TITLE_BarChart",
-      "description": "COMP_DESC_BarChart",
-      "thumbnail" : "bar-chart",
-      "category": "Devices",
-      "cardType": "",
-      "require": ["../cards/BarChart.jsx", "../customization/BarChartProperties.jsx"],
-      "wrapper": "ReactWrapper",
-      "sizes": [[2,3],[3,3],[4,4]],
-      "parameters" : {
-       "title":"",
-        "component": "BarChart",
-        "title": "Bar chart"
-      },
-      "customization": "BarChartProperties"
-    },
-    {
-      "name": "DonutChart",
-      "displayName": "COMP_TITLE_DonutChart",
-      "description": "COMP_DESC_DonutChart",
-      "thumbnail" : "pie-chart",
-      "category": "Devices",
-      "cardType": "",
-      "require": ["../cards/DonutChart.jsx"],
-      "wrapper": "ReactWrapper",
-      "sizes": [[2,3],[2,4],[4,3],[4,4]],
-      "parameters" : {
-       "title":"",
-        "component": "DonutChart",
-        "title": "Donut chart"
-      }
-    },
-    {
-      "name": "Value",
-      "displayName": "COMP_TITLE_Value",
-      "description": "COMP_DESC_Value",
-      "thumbnail" : "text-based",
-      "category": "Devices",
-      "cardType": "",
-      "require": ["../cards/Value.jsx", "../customization/GaugeProperties.jsx"],
-      "wrapper": "ReactWrapper",
-      "sizes": [[2,1],[2,2],[2,3],[3,4],[4,4]],
-      "parameters" : {
-       "title":"",
-        "component": "Value",
-        "title": "Value"
-      },
-      "customization": "SingleValueProperties"
-    },
-    {
-      "name": "Gauge",
-      "displayName": "COMP_TITLE_Gauge",
-      "description": "COMP_DESC_Gauge",
-      "thumbnail" : "gauge",
-      "category": "Devices",
-      "cardType": "",
-      "require": ["../cards/Gauge.jsx", "../customization/GaugeProperties.jsx"],
-      "wrapper": "ReactWrapper",
-      "sizes": [[2,1],[2,4],[4,4]],
-      "parameters" : {
-        "component": "Gauge",
-        "title": "Gauge"
-      },
-      "customization": "GaugeProperties"
-    },
-
-    {
-      "name": "Elevator",
-      "displayName": "Elevator Demo",
-      "description": "Animated elevator card to show floor, weight and height in one card.",
-      "thumbnail" : "elevator",
-      "category": "Custom",
-      "cardType": "SPECIFIC",
-      "wrapper": "ReactWrapper",
-      "sizes": [[2,4],[2,6],[2,8]],
-      "module": "ElevatorDemo",
-      "parameters" : {
-        "component": "Elevator",
-        "title": "Elevator",
-        "floor": "location.floor",
-        "height": "location.height",
-        "weight": "weight.value"
-      },
-      "customization": "ElevatorProperties"
-    },
-    {
-      "name": "WeatherService",
-      "displayName": "Weather Service",
-      "description": "Shows weather information from The Weather Channel",
-      "thumbnail" : "weatherService",
-      "category": "Custom",
-      "cardType": "EVENT_ONLY",
-      "wrapper": "ReactWrapper",
-      "sizes": [[2,2],[3,3],[4,2],[4,4],[4,5]],
-      "module": "WeatherService",
-      "parameters" : {
-        "component": "WeatherService",
-        "location": "Rottenburg",
-        "title": "Weather Service"
-      },
-      "customization": "WeatherServiceProperties"
-    },
-    {
-      "name": "Runtastic",
-      "displayName": "Runtastic last run",
-      "description": "Shows statistics of my last run",
-      "thumbnail" : "sport",
-      "category": "Custom",
-      "cardType": "EVENT_ONLY",
-      "wrapper": "ReactWrapper",
-      "sizes": [[2,3],[4,4]],
-      "module": "Runtastic",
-      "parameters" : {
-        "component": "Runtastic",
-        "title": "Runtastic"
-      }
-    },
-    {
-      "name": "Webcam",
-      "displayName": "Webcam",
-      "description": "Shows a streaming image of a private or public webcam",
-      "thumbnail" : "camera",
-      "category": "Custom",
-      "cardType": "NO_DATAPOINTS",
-      "wrapper": "ReactWrapper",
-      "sizes": [[2,3],[4,5]],
-      "module": "Webcam",
-      "parameters" : {
-        "component": "Webcam",
-        "title": "Webcam"
-      },
-      "customization": "WebcamProperties"
-    },
-    {
-      "name": "DeviceMap",
-      "displayName": "DeviceMap",
-      "description": "Shows the position of one or more devices in a map",
-      "thumbnail" : "map",
-      "category": "Custom",
-      "cardType": "SPECIFIC",
-      "wrapper": "ReactWrapper",
-      "sizes": [[2,3],[4,5]],
-      "module": "DeviceMap",
-      "parameters" : {
-        "component": "DeviceMap",
-        "title": "Device map"
-      },
-      "customization": "DeviceMapProperties"
-    },
-    {
-      "name": "ToggleGroup",
-      "displayName": "Toggle group",
-      "description": "Shows a group of binary values",
-      "thumbnail" : "radio-button-on",
-      "category": "Custom",
-      "cardType": "",
-      "wrapper": "ReactWrapper",
-      "sizes": [[2,2],[3,2],[3,4],[4,2],[4,4],[4,5]],
-      "module": "ToggleGroup",
-      "parameters" : {
-        "component": "ToggleGroup",
-        "title": "Toggle group"
-      },
-      "customization": "ToggleGroupProperties"
-    },
     {
       "name": "HelloWorld",
       "displayName": "HelloWorld",
