--- a/public/config/DashboardConfig.json
+++ b/public/config/DashboardConfig.json
@@ -64,6 +64,36 @@
         "component": "MessageViewer",
         "title": "Message viewer"
       }
+    },
+    {
+      "name": "MessageDetails",
+      "displayName": "Message details",
+      "description": "Show details of a single device message",
+      "thumbnail" : "overview",
+      "category": "Maintenance",
+      "cardType": "NO_DATAPOINTS",
+      "wrapper": "ReactWrapper",
+      "sizes": [[3,4],[3,5],[3,6]],
+      "module": "Maintenance",
+      "parameters" : {
+        "component": "MessageDetails",
+        "title": "Message details"
+      }
+    },
+    {
+      "name": "LogViewer",
+      "displayName": "Log viewer",
+      "description": "Show latest entries on the console",
+      "thumbnail" : "overview",
+      "category": "Maintenance",
+      "cardType": "NO_DATAPOINTS",
+      "wrapper": "ReactWrapper",
+      "sizes": [[6,2],[6,4],[6,6]],
+      "module": "Maintenance",
+      "parameters" : {
+        "component": "LogViewer",
+        "title": "Log viewer"
+      }
     }
   ]
 }
