--- a/public/config/DashboardConfig.json
+++ b/public/config/DashboardConfig.json
@@ -5,8 +5,8 @@
 
   "components": [
     {
-      "name": "MyRemoteHelloWorld",
-      "displayName": "Remote HelloWorld",
+      "name": "HelloWorld",
+      "displayName": "HelloWorld",
       "description": "Example card with simple customization and store",
       "thumbnail" : "overview",
       "category": "Samples",
@@ -16,84 +16,9 @@
       "module": "HelloWorld",
       "parameters" : {
         "component": "HelloWorld",
-        "title": "Remote Hello World!"
+        "title": "Hello World!"
       },
       "customization": "HelloWorldProperties"
-    },
-    {
-      "name": "Maintenance",
-      "displayName": "Maintenance tools",
-      "description": "Several tools to develop, fix and maintain the environment",
-      "thumbnail" : "overview",
-      "category": "Maintenance",
-      "cardType": "NO_DATAPOINTS",
-      "wrapper": "ReactWrapper",
-      "sizes": [[4,4]],
-      "module": "Maintenance",
-      "parameters" : {
-        "component": "Maintenance",
-        "title": "Maintenance"
-      }
-    },
-    {
-      "name": "VideoChat",
-      "displayName": "Service chat",
-      "description": "Direct contact to our friendly support service",
-      "thumbnail" : "overview",
-      "category": "Maintenance",
-      "cardType": "NO_DATAPOINTS",
-      "wrapper": "ReactWrapper",
-      "sizes": [[4,4]],
-      "module": "Maintenance",
-      "parameters" : {
-        "component": "VideoChat",
-        "title": "Service Chat"
-      }
-    },
-    {
-      "name": "MessageViewer",
-      "displayName": "Device message viewer",
-      "description": "Show live messages of your devices",
-      "thumbnail" : "overview",
-      "category": "Maintenance",
-      "cardType": "NO_DATAPOINTS",
-      "wrapper": "ReactWrapper",
-      "sizes": [[3,2],[3,3],[3,4]],
-      "module": "Maintenance",
-      "parameters" : {
-        "component": "MessageViewer",
-        "title": "Message viewer"
-      }
-    },
-    {
-      "name": "MessageDetails",
-      "displayName": "Message details",
-      "description": "Show details of a single device message",
-      "thumbnail" : "overview",
-      "category": "Maintenance",
-      "cardType": "NO_DATAPOINTS",
-      "wrapper": "ReactWrapper",
-      "sizes": [[3,4],[3,5],[3,6]],
-      "module": "Maintenance",
-      "parameters" : {
-        "component": "MessageDetails",
-        "title": "Message details"
-      }
-    },
-    {
-      "name": "LogViewer",
-      "displayName": "Log viewer",
-      "description": "Show latest entries on the console",
-      "thumbnail" : "overview",
-      "category": "Maintenance",
-      "cardType": "NO_DATAPOINTS",
-      "wrapper": "ReactWrapper",
-      "sizes": [[6,2],[6,4],[6,6]],
-      "module": "Maintenance",
-      "parameters" : {
-        "component": "LogViewer",
-        "title": "Log viewer"
-      }
     }
   ]
 }
